--- a/configs/ipq60xx-6.12-wifi.config
+++ b/configs/ipq60xx-6.12-wifi.config
@@ -1,7 +1,6 @@
 CONFIG_TARGET_qualcommax=y
 CONFIG_TARGET_qualcommax_ipq60xx=y
-CONFIG_TARGET_MULTI_PROFILE=y
-CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_qihoo_v6=y
+CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_qihoo_360v6=y
 CONFIG_BUSYBOX_CUSTOM=y
 CONFIG_TARGET_PER_DEVICE_ROOTFS=y
 # CONFIG_ATH11K_MEM_PROFILE_1G is not set
@@ -242,7 +241,7 @@ CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-netspeedtest=y
 CONFIG_PACKAGE_luci-app-package-manager=y
-CONFIG_PACKAGE_luci-app-passwall=m
+# CONFIG_PACKAGE_luci-app-passwall=m
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Server is not set
@@ -267,7 +266,7 @@ CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-homeproxy-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-package-manager-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=m
+# CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-samba4-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-sqm-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
@@ -302,7 +301,8 @@ CONFIG_PACKAGE_rpcd-mod-ucode=y
 CONFIG_PACKAGE_runc=m
 CONFIG_PACKAGE_samba4-libs=m
 CONFIG_PACKAGE_samba4-server=m
-CONFIG_PACKAGE_sing-box=y
+# CONFIG_PACKAGE_sing-box=y
+CONFIG_PACKAGE_smartdns=y
 CONFIG_PACKAGE_sqm-scripts=y
 CONFIG_PACKAGE_tc-tiny=y
 CONFIG_PACKAGE_tcping=m
@@ -316,7 +316,7 @@ CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_unzip=m
 CONFIG_PACKAGE_wpad-basic-mbedtls=m
 CONFIG_PACKAGE_wsdd2=m
-CONFIG_PACKAGE_xray-core=m
+# CONFIG_PACKAGE_xray-core=m
 CONFIG_PACKAGE_xtables-nft=y
 CONFIG_PACKAGE_zerotier=y
 CONFIG_PACKAGE_zram-swap=y
