--- a/configs/ipq60xx-6.12-wifi.config
+++ b/configs/ipq60xx-6.12-wifi.config
@@ -6,7 +6,7 @@ CONFIG_BUSYBOX_CUSTOM=y
 CONFIG_TARGET_PER_DEVICE_ROOTFS=y
 # CONFIG_ATH11K_MEM_PROFILE_1G is not set
 CONFIG_ATH11K_MEM_PROFILE_512M=y
-# CONFIG_BUSYBOX_CONFIG_FEATURE_IPV6 is not set
+CONFIG_BUSYBOX_CONFIG_FEATURE_IPV6=y
 CONFIG_BUSYBOX_CONFIG_LSUSB=y
 CONFIG_DOCKER_CGROUP_OPTIONS=y
 CONFIG_DOCKER_NET_MACVLAN=y
@@ -251,8 +251,10 @@ CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-wol=y
 CONFIG_PACKAGE_luci-app-zerotier=n
+CONFIG_PACKAGE_luci-app-athena-led=m
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-compat=y
+CONFIG_PACKAGE_luci-i18n-athena-led-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=n
