--- a/.github/workflows/IPQ60XX-6.12-WIFI.yml
+++ b/.github/workflows/IPQ60XX-6.12-WIFI.yml
@@ -29,7 +29,7 @@ jobs:
         id: check_time
         run: |
           # 获取远程仓库的最后一次提交时间
-          last_commit_date=$(curl -s "https://api.github.com/repos/LiBwrt/openwrt-6.x/commits/kernel-6.12" | jq -r '.commit.author.date')
+          last_commit_date=$(curl -s "https://api.github.com/repos/LiBwrt/openwrt-6.x/commits/k6.12-nss" | jq -r '.commit.author.date')
           last_commit_timestamp=$(date -d "$last_commit_date" +%s)
           current_timestamp=$(date +%s)
           time_diff=$((current_timestamp - last_commit_timestamp))
